--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
